Don't store the prescontext in the plugin instance owner.  Bug 312055, r+sr=roc